26.1.2/core/api/index.md
<a id="api"></a>

# API Reference![agentspec-icon](_static/icons/agentspec-icon.svg)

Visit the Agent Spec API Documentation to learn more about the native Agent Spec Components.

[Agent Spec - API Reference](https://oracle.github.io/agent-spec/api/index.html)

#### TIP
Click the button above ↑ to visit the [Agent Spec Documentation](https://oracle.github.io/agent-spec/index.html)

* [Agent Spec Adapters](agentspec.md)
  * [`AgentSpecExporter`](agentspec.md#wayflowcore.agentspec.agentspecexporter.AgentSpecExporter)
    * [`AgentSpecExporter.to_component()`](agentspec.md#wayflowcore.agentspec.agentspecexporter.AgentSpecExporter.to_component)
    * [`AgentSpecExporter.to_json()`](agentspec.md#wayflowcore.agentspec.agentspecexporter.AgentSpecExporter.to_json)
    * [`AgentSpecExporter.to_yaml()`](agentspec.md#wayflowcore.agentspec.agentspecexporter.AgentSpecExporter.to_yaml)
  * [`AgentSpecLoader`](agentspec.md#wayflowcore.agentspec.runtimeloader.AgentSpecLoader)
    * [`AgentSpecLoader.load_component()`](agentspec.md#wayflowcore.agentspec.runtimeloader.AgentSpecLoader.load_component)
    * [`AgentSpecLoader.load_json()`](agentspec.md#wayflowcore.agentspec.runtimeloader.AgentSpecLoader.load_json)
    * [`AgentSpecLoader.load_yaml()`](agentspec.md#wayflowcore.agentspec.runtimeloader.AgentSpecLoader.load_yaml)
* [Agent Spec Tracing](agentspec.md#agent-spec-tracing)
  * [`AgentSpecEventListener`](agentspec.md#wayflowcore.agentspec.tracing.AgentSpecEventListener)
* [Custom Components](agentspec.md#custom-components)
  * [Extended Components](agentspec.md#extended-components)
    * [`ExtendedAgent`](agentspec.md#wayflowcore.agentspec.components.agent.ExtendedAgent)
    * [`ExtendedFlow`](agentspec.md#wayflowcore.agentspec.components.flow.ExtendedFlow)
    * [`ExtendedToolNode`](agentspec.md#wayflowcore.agentspec.components.nodes.ExtendedToolNode)
    * [`ExtendedLlmNode`](agentspec.md#wayflowcore.agentspec.components.nodes.ExtendedLlmNode)
    * [`ExtendedMapNode`](agentspec.md#wayflowcore.agentspec.components.nodes.ExtendedMapNode)
  * [Plugin Components](agentspec.md#plugin-components)
    * [Agentic patterns](agentspec.md#agentic-patterns)
    * [Tools](agentspec.md#tools)
    * [Search](agentspec.md#search)
    * [Embedding Models](agentspec.md#embedding-models)
    * [Messages](agentspec.md#messages)
    * [Nodes](agentspec.md#nodes)
    * [Context Providers](agentspec.md#context-providers)
    * [Tools](agentspec.md#id1)
    * [Context](agentspec.md#context)
* [Conversations](conversation.md)
  * [Messages](conversation.md#messages)
    * [`Message`](conversation.md#wayflowcore.messagelist.Message)
    * [`MessageType`](conversation.md#wayflowcore.messagelist.MessageType)
    * [`MessageContent`](conversation.md#wayflowcore.messagelist.MessageContent)
    * [`TextContent`](conversation.md#wayflowcore.messagelist.TextContent)
    * [`TextTokenLogProb`](conversation.md#wayflowcore.messagelist.TextTokenLogProb)
    * [`TextTokenTopLogProb`](conversation.md#wayflowcore.messagelist.TextTokenTopLogProb)
    * [`ImageContent`](conversation.md#wayflowcore.messagelist.ImageContent)
    * [`MessageList`](conversation.md#wayflowcore.messagelist.MessageList)
  * [ExecutionStatus](conversation.md#executionstatus)
    * [`ExecutionStatus`](conversation.md#wayflowcore.executors.executionstatus.ExecutionStatus)
    * [`UserMessageRequestStatus`](conversation.md#wayflowcore.executors.executionstatus.UserMessageRequestStatus)
    * [`FinishedStatus`](conversation.md#wayflowcore.executors.executionstatus.FinishedStatus)
    * [`ToolRequestStatus`](conversation.md#wayflowcore.executors.executionstatus.ToolRequestStatus)
    * [`AuthChallengeRequestStatus`](conversation.md#wayflowcore.executors.executionstatus.AuthChallengeRequestStatus)
  * [Conversation](conversation.md#conversation)
    * [`ConversationalComponent`](conversation.md#wayflowcore.conversationalcomponent.ConversationalComponent)
    * [`Conversation`](conversation.md#wayflowcore.conversation.Conversation)
  * [Execution Plan](conversation.md#execution-plan)
    * [`ExecutionPlan`](conversation.md#wayflowcore.planning.ExecutionPlan)
    * [`Task`](conversation.md#wayflowcore.planning.Task)
    * [`TaskStatus`](conversation.md#wayflowcore.planning.TaskStatus)
* [LLMs](llmmodels.md)
  * [LlmModel](llmmodels.md#llmmodel)
    * [`LlmModel`](llmmodels.md#wayflowcore.models.llmmodel.LlmModel)
    * [`StreamChunkType`](llmmodels.md#wayflowcore.models._requesthelpers.StreamChunkType)
  * [LlmModelFactory](llmmodels.md#llmmodelfactory)
    * [`LlmModelFactory`](llmmodels.md#wayflowcore.models.llmmodelfactory.LlmModelFactory)
  * [LlmCompletion](llmmodels.md#llmcompletion)
    * [`LlmCompletion`](llmmodels.md#wayflowcore.models.LlmCompletion)
  * [Prompt](llmmodels.md#prompt)
    * [`Prompt`](llmmodels.md#wayflowcore.models.Prompt)
  * [Token Usage](llmmodels.md#token-usage)
    * [`TokenUsage`](llmmodels.md#wayflowcore.tokenusage.TokenUsage)
  * [LLM Generation Config](llmmodels.md#llm-generation-config)
    * [`LlmGenerationConfig`](llmmodels.md#wayflowcore.models.llmgenerationconfig.LlmGenerationConfig)
  * [API Type](llmmodels.md#api-type)
    * [`OpenAIAPIType`](llmmodels.md#wayflowcore.models.openaiapitype.OpenAIAPIType)
  * [All models](llmmodels.md#all-models)
    * [OpenAI Compatible Models](llmmodels.md#openai-compatible-models)
    * [OpenAI Models](llmmodels.md#openai-models)
    * [Gemini Models](llmmodels.md#gemini-models)
    * [Ollama Models](llmmodels.md#ollama-models)
    * [VLLM Models](llmmodels.md#vllm-models)
    * [OCI GenAI Models](llmmodels.md#oci-genai-models)
* [Events](events.md)
  * [Events](events.md#id2)
    * [`Event`](events.md#wayflowcore.events.event.Event)
    * [`LlmGenerationRequestEvent`](events.md#wayflowcore.events.event.LlmGenerationRequestEvent)
    * [`LlmGenerationResponseEvent`](events.md#wayflowcore.events.event.LlmGenerationResponseEvent)
    * [`ConversationalComponentExecutionStartedEvent`](events.md#wayflowcore.events.event.ConversationalComponentExecutionStartedEvent)
    * [`ConversationalComponentExecutionFinishedEvent`](events.md#wayflowcore.events.event.ConversationalComponentExecutionFinishedEvent)
    * [`ConversationCreatedEvent`](events.md#wayflowcore.events.event.ConversationCreatedEvent)
    * [`ConversationMessageAddedEvent`](events.md#wayflowcore.events.event.ConversationMessageAddedEvent)
    * [`ConversationMessageStreamStartedEvent`](events.md#wayflowcore.events.event.ConversationMessageStreamStartedEvent)
    * [`ConversationMessageStreamChunkEvent`](events.md#wayflowcore.events.event.ConversationMessageStreamChunkEvent)
    * [`ConversationMessageStreamEndedEvent`](events.md#wayflowcore.events.event.ConversationMessageStreamEndedEvent)
    * [`ConversationExecutionStartedEvent`](events.md#wayflowcore.events.event.ConversationExecutionStartedEvent)
    * [`ConversationExecutionFinishedEvent`](events.md#wayflowcore.events.event.ConversationExecutionFinishedEvent)
    * [`ToolExecutionStartEvent`](events.md#wayflowcore.events.event.ToolExecutionStartEvent)
    * [`ToolExecutionStreamingChunkReceivedEvent`](events.md#wayflowcore.events.event.ToolExecutionStreamingChunkReceivedEvent)
    * [`ToolExecutionResultEvent`](events.md#wayflowcore.events.event.ToolExecutionResultEvent)
    * [`ToolConfirmationRequestStartEvent`](events.md#wayflowcore.events.event.ToolConfirmationRequestStartEvent)
    * [`ToolConfirmationRequestEndEvent`](events.md#wayflowcore.events.event.ToolConfirmationRequestEndEvent)
    * [`StepInvocationStartEvent`](events.md#wayflowcore.events.event.StepInvocationStartEvent)
    * [`StepInvocationResultEvent`](events.md#wayflowcore.events.event.StepInvocationResultEvent)
    * [`ContextProviderExecutionRequestEvent`](events.md#wayflowcore.events.event.ContextProviderExecutionRequestEvent)
    * [`ContextProviderExecutionResultEvent`](events.md#wayflowcore.events.event.ContextProviderExecutionResultEvent)
    * [`FlowExecutionIterationStartedEvent`](events.md#wayflowcore.events.event.FlowExecutionIterationStartedEvent)
    * [`FlowExecutionIterationFinishedEvent`](events.md#wayflowcore.events.event.FlowExecutionIterationFinishedEvent)
    * [`AgentExecutionIterationStartedEvent`](events.md#wayflowcore.events.event.AgentExecutionIterationStartedEvent)
    * [`AgentExecutionIterationFinishedEvent`](events.md#wayflowcore.events.event.AgentExecutionIterationFinishedEvent)
    * [`ExceptionRaisedEvent`](events.md#wayflowcore.events.event.ExceptionRaisedEvent)
    * [`AgentNextActionDecisionStartEvent`](events.md#wayflowcore.events.event.AgentNextActionDecisionStartEvent)
    * [`AgentDecidedNextActionEvent`](events.md#wayflowcore.events.event.AgentDecidedNextActionEvent)
  * [Event Listeners](events.md#event-listeners)
    * [`EventListener`](events.md#wayflowcore.events.eventlistener.EventListener)
    * [`GenericEventListener`](events.md#wayflowcore.events.eventlistener.GenericEventListener)
    * [`register_event_listeners()`](events.md#wayflowcore.events.eventlistener.register_event_listeners)
    * [`get_event_listeners()`](events.md#wayflowcore.events.eventlistener.get_event_listeners)
    * [`record_event()`](events.md#wayflowcore.events.eventlistener.record_event)
* [Flows](flows.md)
  * [Flows & Steps](flows.md#flows-steps)
    * [`Flow`](flows.md#wayflowcore.flow.Flow)
    * [`Step`](flows.md#wayflowcore.steps.step.Step)
    * [`DataFlowEdge`](flows.md#wayflowcore.dataconnection.DataFlowEdge)
    * [`ControlFlowEdge`](flows.md#wayflowcore.controlconnection.ControlFlowEdge)
  * [Task steps](flows.md#task-steps)
    * [`AgentExecutionStep`](flows.md#wayflowcore.steps.agentexecutionstep.AgentExecutionStep)
    * [`PromptExecutionStep`](flows.md#wayflowcore.steps.promptexecutionstep.PromptExecutionStep)
    * [`TemplateRenderingStep`](flows.md#wayflowcore.steps.templaterenderingstep.TemplateRenderingStep)
    * [`ToolExecutionStep`](flows.md#wayflowcore.steps.toolexecutionstep.ToolExecutionStep)
    * [`ExtractValueFromJsonStep`](flows.md#wayflowcore.steps.textextractionstep.extractvaluefromjsonstep.ExtractValueFromJsonStep)
    * [`RegexExtractionStep`](flows.md#wayflowcore.steps.textextractionstep.regexextractionstep.RegexExtractionStep)
    * [`StructuredGenerationMode`](flows.md#wayflowcore.steps.promptexecutionstep.StructuredGenerationMode)
    * [`SearchStep`](flows.md#wayflowcore.steps.searchstep.SearchStep)
    * [Datastore tasks](flows.md#datastore-tasks)
  * [IO steps](flows.md#io-steps)
    * [`InputMessageStep`](flows.md#wayflowcore.steps.inputmessagestep.InputMessageStep)
    * [`OutputMessageStep`](flows.md#wayflowcore.steps.outputmessagestep.OutputMessageStep)
    * [`GetChatHistoryStep`](flows.md#wayflowcore.steps.getchathistorystep.GetChatHistoryStep)
    * [`VariableStep`](flows.md#wayflowcore.steps.variablesteps.variablestep.VariableStep)
    * [`VariableReadStep`](flows.md#wayflowcore.steps.variablesteps.variablereadstep.VariableReadStep)
    * [`VariableWriteStep`](flows.md#wayflowcore.steps.variablesteps.variablewritestep.VariableWriteStep)
    * [`ConstantValuesStep`](flows.md#wayflowcore.steps.ConstantValuesStep)
    * [`MessageSlice`](flows.md#wayflowcore.steps.getchathistorystep.MessageSlice)
  * [Flow steps](flows.md#flow-steps)
    * [`RetryStep`](flows.md#wayflowcore.steps.retrystep.RetryStep)
    * [`CatchExceptionStep`](flows.md#wayflowcore.steps.catchexceptionstep.CatchExceptionStep)
    * [`FlowExecutionStep`](flows.md#wayflowcore.steps.flowexecutionstep.FlowExecutionStep)
    * [`ParallelFlowExecutionStep`](flows.md#wayflowcore.steps.parallelflowexecutionstep.ParallelFlowExecutionStep)
    * [`MapStep`](flows.md#wayflowcore.steps.mapstep.MapStep)
    * [`ParallelMapStep`](flows.md#wayflowcore.steps.mapstep.ParallelMapStep)
    * [`BranchingStep`](flows.md#wayflowcore.steps.branchingstep.BranchingStep)
    * [`ChoiceSelectionStep`](flows.md#wayflowcore.steps.choiceselectionstep.ChoiceSelectionStep)
    * [`CompleteStep`](flows.md#wayflowcore.steps.completestep.CompleteStep)
    * [`StartStep`](flows.md#wayflowcore.steps.startstep.StartStep)
    * [`ApiCallStep`](flows.md#wayflowcore.steps.apicallstep.ApiCallStep)
    * [`StepDescription`](flows.md#wayflowcore.stepdescription.StepDescription)
  * [Classes for the IO system properties](flows.md#classes-for-the-io-system-properties)
    * [`Property`](flows.md#wayflowcore.property.Property)
    * [`BooleanProperty`](flows.md#wayflowcore.property.BooleanProperty)
    * [`FloatProperty`](flows.md#wayflowcore.property.FloatProperty)
    * [`MessageProperty`](flows.md#wayflowcore.property.MessageProperty)
    * [`IntegerProperty`](flows.md#wayflowcore.property.IntegerProperty)
    * [`StringProperty`](flows.md#wayflowcore.property.StringProperty)
    * [`AnyProperty`](flows.md#wayflowcore.property.AnyProperty)
    * [`ListProperty`](flows.md#wayflowcore.property.ListProperty)
    * [`DictProperty`](flows.md#wayflowcore.property.DictProperty)
    * [`ObjectProperty`](flows.md#wayflowcore.property.ObjectProperty)
    * [`UnionProperty`](flows.md#wayflowcore.property.UnionProperty)
    * [`NullProperty`](flows.md#wayflowcore.property.NullProperty)
    * [`VectorProperty`](flows.md#wayflowcore.property.VectorProperty)
    * [`_empty_default`](flows.md#wayflowcore.property._empty_default)
    * [`JsonSchemaParam`](flows.md#wayflowcore.property.JsonSchemaParam)
  * [Other classes and helpers used in fixed flows](flows.md#other-classes-and-helpers-used-in-fixed-flows)
    * [`StepResult`](flows.md#wayflowcore.steps.step.StepResult)
    * [`StepExecutionStatus`](flows.md#wayflowcore.steps.step.StepExecutionStatus)
    * [`run_step_and_return_outputs`](flows.md#wayflowcore.flowhelpers.run_step_and_return_outputs)
    * [`run_flow_and_return_outputs`](flows.md#wayflowcore.flowhelpers.run_flow_and_return_outputs)
    * [`create_single_step_flow`](flows.md#wayflowcore.flowhelpers.create_single_step_flow)
  * [Flow Builder](flows.md#flow-builder)
    * [`FlowBuilder`](flows.md#wayflowcore.flowbuilder.FlowBuilder)
* [Agents](agent.md)
  * [Agent related classes](agent.md#agent-related-classes)
    * [Agent class](agent.md#agent-class)
    * [OCI Agent class](agent.md#oci-agent-class)
    * [A2A Agent class](agent.md#a2a-agent-class)
    * [DescribedFlow](agent.md#describedflow)
    * [DescribedAgent](agent.md#describedagent)
    * [Swarm class](agent.md#swarm-class)
    * [ManagerWorkers class](agent.md#managerworkers-class)
  * [Agent Behavior Configuration](agent.md#agent-behavior-configuration)
    * [`CallerInputMode`](agent.md#wayflowcore.agent.CallerInputMode)
* [Agent Server](agentserver.md)
  * [Server application](agentserver.md#server-application)
    * [`OpenAIResponsesServer`](agentserver.md#wayflowcore.agentserver.server.OpenAIResponsesServer)
    * [`A2AServer`](agentserver.md#wayflowcore.agentserver.server.A2AServer)
    * [`ServerStorageConfig`](agentserver.md#wayflowcore.agentserver.serverstorageconfig.ServerStorageConfig)
    * [`create_server_app()`](agentserver.md#wayflowcore.agentserver.app.create_server_app)
  * [CLI Reference](agentserver.md#cli-reference)
    * [Positional Arguments](agentserver.md#wayflowcore.cli-build_parser-positional-arguments)
    * [Sub-commands](agentserver.md#Sub-commands)
* [Embedding Models](embeddingmodels.md)
  * [EmbeddingModel](embeddingmodels.md#embeddingmodel)
    * [`EmbeddingModel`](embeddingmodels.md#wayflowcore.embeddingmodels.embeddingmodel.EmbeddingModel)
  * [All models](embeddingmodels.md#all-models)
    * [OpenAI Compatible Embedding Models](embeddingmodels.md#openai-compatible-embedding-models)
    * [OpenAI Embedding Models](embeddingmodels.md#openai-embedding-models)
    * [VLLM Embedding Models](embeddingmodels.md#vllm-embedding-models)
    * [OCI GenAI Embedding Models](embeddingmodels.md#oci-genai-embedding-models)
    * [Ollama Embedding Models](embeddingmodels.md#ollama-embedding-models)
* [Retries](retries.md)
  * [Retry Policy](retries.md#retry-policy)
    * [`RetryPolicy`](retries.md#wayflowcore.retrypolicy.RetryPolicy)
  * [Retry Jitter](retries.md#retry-jitter)
    * [`RetryJitter`](retries.md#wayflowcore.retrypolicy.RetryJitter)
* [Context Providers](contextproviders.md)
  * [Base classes](contextproviders.md#base-classes)
    * [`ContextProvider`](contextproviders.md#wayflowcore.contextproviders.contextprovider.ContextProvider)
  * [Available Context Providers](contextproviders.md#available-context-providers)
    * [`ToolContextProvider`](contextproviders.md#wayflowcore.contextproviders.toolcontextprovider.ToolContextProvider)
    * [`FlowContextProvider`](contextproviders.md#wayflowcore.contextproviders.flowcontextprovider.FlowContextProvider)
* [Execution Interrupts](interrupts.md)
  * [Execution Interrupt interface](interrupts.md#execution-interrupt-interface)
    * [`ExecutionInterrupt`](interrupts.md#wayflowcore.executors.interrupts.executioninterrupt.ExecutionInterrupt)
    * [`InterruptedExecutionStatus`](interrupts.md#wayflowcore.executors.interrupts.executioninterrupt.InterruptedExecutionStatus)
  * [Basic Execution Interrupt classes](interrupts.md#basic-execution-interrupt-classes)
    * [Timeout Execution Interrupt](interrupts.md#timeout-execution-interrupt)
    * [Token Limit Execution Interrupt](interrupts.md#token-limit-execution-interrupt)
* [PromptTemplates](prompttemplate.md)
  * [`PromptTemplate`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate)
    * [`PromptTemplate.CHAT_HISTORY_PLACEHOLDER`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.CHAT_HISTORY_PLACEHOLDER)
    * [`PromptTemplate.CHAT_HISTORY_PLACEHOLDER_NAME`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.CHAT_HISTORY_PLACEHOLDER_NAME)
    * [`PromptTemplate.RESPONSE_FORMAT_PLACEHOLDER_NAME`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.RESPONSE_FORMAT_PLACEHOLDER_NAME)
    * [`PromptTemplate.TOOL_PLACEHOLDER_NAME`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.TOOL_PLACEHOLDER_NAME)
    * [`PromptTemplate.copy()`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.copy)
    * [`PromptTemplate.format()`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.format)
    * [`PromptTemplate.format_async()`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.format_async)
    * [`PromptTemplate.from_string()`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.from_string)
    * [`PromptTemplate.generation_config`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.generation_config)
    * [`PromptTemplate.input_descriptors`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.input_descriptors)
    * [`PromptTemplate.messages`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.messages)
    * [`PromptTemplate.native_structured_generation`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.native_structured_generation)
    * [`PromptTemplate.native_tool_calling`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.native_tool_calling)
    * [`PromptTemplate.output_parser`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.output_parser)
    * [`PromptTemplate.post_rendering_transforms`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.post_rendering_transforms)
    * [`PromptTemplate.pre_rendering_transforms`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.pre_rendering_transforms)
    * [`PromptTemplate.response_format`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.response_format)
    * [`PromptTemplate.tools`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.tools)
    * [`PromptTemplate.with_additional_post_rendering_transform()`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.with_additional_post_rendering_transform)
    * [`PromptTemplate.with_additional_pre_rendering_transform()`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.with_additional_pre_rendering_transform)
    * [`PromptTemplate.with_generation_config()`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.with_generation_config)
    * [`PromptTemplate.with_output_parser()`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.with_output_parser)
    * [`PromptTemplate.with_partial()`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.with_partial)
    * [`PromptTemplate.with_response_format()`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.with_response_format)
    * [`PromptTemplate.with_tools()`](prompttemplate.md#wayflowcore.templates.template.PromptTemplate.with_tools)
  * [OutputParser](prompttemplate.md#outputparser)
    * [`OutputParser`](prompttemplate.md#wayflowcore.outputparser.OutputParser)
    * [`RegexOutputParser`](prompttemplate.md#wayflowcore.outputparser.RegexOutputParser)
    * [`RegexPattern`](prompttemplate.md#wayflowcore.outputparser.RegexPattern)
    * [`JsonOutputParser`](prompttemplate.md#wayflowcore.outputparser.JsonOutputParser)
    * [`ToolOutputParser`](prompttemplate.md#wayflowcore.outputparser.ToolOutputParser)
  * [Message transforms](prompttemplate.md#message-transforms)
    * [`MessageTransform`](prompttemplate.md#wayflowcore.transforms.MessageTransform)
    * [`CoalesceSystemMessagesTransform`](prompttemplate.md#wayflowcore.transforms.CoalesceSystemMessagesTransform)
    * [`RemoveEmptyNonUserMessageTransform`](prompttemplate.md#wayflowcore.transforms.RemoveEmptyNonUserMessageTransform)
    * [`AppendTrailingSystemMessageToUserMessageTransform`](prompttemplate.md#wayflowcore.transforms.AppendTrailingSystemMessageToUserMessageTransform)
    * [`SplitPromptOnMarkerMessageTransform`](prompttemplate.md#wayflowcore.transforms.SplitPromptOnMarkerMessageTransform)
    * [`CanonicalizationMessageTransform`](prompttemplate.md#wayflowcore.transforms.CanonicalizationMessageTransform)
    * [`MessageSummarizationTransform`](prompttemplate.md#wayflowcore.transforms.MessageSummarizationTransform)
    * [`ConversationSummarizationTransform`](prompttemplate.md#wayflowcore.transforms.ConversationSummarizationTransform)
  * [Helpers](prompttemplate.md#helpers)
    * [`adapt_prompt_template_for_json_structured_generation()`](prompttemplate.md#wayflowcore.templates.structuredgeneration.adapt_prompt_template_for_json_structured_generation)
    * [`ToolRequestAsDictT`](prompttemplate.md#wayflowcore._utils._templating_helpers.ToolRequestAsDictT)
    * [`ToolResultAsDictT`](prompttemplate.md#wayflowcore._utils._templating_helpers.ToolResultAsDictT)
    * [`MessageAsDictT`](prompttemplate.md#wayflowcore._utils._templating_helpers.MessageAsDictT)
* [Serialization/Deserialization](serialization.md)
  * [Base classes](serialization.md#base-classes)
    * [`SerializableObject`](serialization.md#wayflowcore.serialization.serializer.SerializableObject)
  * [Serialization](serialization.md#id1)
    * [`SerializationContext`](serialization.md#wayflowcore.serialization.context.SerializationContext)
    * [`serialize()`](serialization.md#wayflowcore.serialization.serializer.serialize)
  * [Deserialization](serialization.md#deserialization)
    * [`DeserializationContext`](serialization.md#wayflowcore.serialization.context.DeserializationContext)
    * [`deserialize()`](serialization.md#wayflowcore.serialization.serializer.deserialize)
    * [`autodeserialize()`](serialization.md#wayflowcore.serialization.serializer.autodeserialize)
  * [Plugins](serialization.md#plugins)
    * [`WayflowSerializationPlugin`](serialization.md#wayflowcore.serialization.plugins.WayflowSerializationPlugin)
    * [`WayflowDeserializationPlugin`](serialization.md#wayflowcore.serialization.plugins.WayflowDeserializationPlugin)
* [Tools](tools.md)
  * [Tool](tools.md#tool)
    * [`Tool`](tools.md#wayflowcore.tools.tools.Tool)
  * [Client Tool](tools.md#client-tool)
    * [`ClientTool`](tools.md#wayflowcore.tools.clienttools.ClientTool)
  * [Server Tool](tools.md#server-tool)
    * [`ServerTool`](tools.md#wayflowcore.tools.servertools.ServerTool)
  * [Tool from ToolBox](tools.md#tool-from-toolbox)
    * [`ToolFromToolBox`](tools.md#wayflowcore.tools.toolfromtoolbox.ToolFromToolBox)
  * [Remote Tool](tools.md#remote-tool)
    * [`RemoteTool`](tools.md#wayflowcore.tools.remotetools.RemoteTool)
  * [MCP Tool](tools.md#mcp-tool)
    * [`MCPTool`](tools.md#wayflowcore.mcp.MCPTool)
    * [`MCPToolBox`](tools.md#wayflowcore.mcp.MCPToolBox)
    * [`mcp_streaming_tool()`](tools.md#wayflowcore.mcp.mcphelpers.mcp_streaming_tool)
    * [`SessionParameters`](tools.md#wayflowcore.mcp.SessionParameters)
    * [`authless_mcp_enabled()`](tools.md#wayflowcore.mcp.authless_mcp_enabled)
    * [`enable_mcp_without_auth()`](tools.md#wayflowcore.mcp.enable_mcp_without_auth)
    * [`MCPOAuthConfigFactory`](tools.md#wayflowcore.mcp.MCPOAuthConfigFactory)
    * [`ClientTransport`](tools.md#wayflowcore.mcp.ClientTransport)
    * [`StdioTransport`](tools.md#wayflowcore.mcp.StdioTransport)
    * [`SSETransport`](tools.md#wayflowcore.mcp.SSETransport)
    * [`SSEmTLSTransport`](tools.md#wayflowcore.mcp.SSEmTLSTransport)
    * [`StreamableHTTPTransport`](tools.md#wayflowcore.mcp.StreamableHTTPTransport)
    * [`StreamableHTTPmTLSTransport`](tools.md#wayflowcore.mcp.StreamableHTTPmTLSTransport)
  * [Tool decorator](tools.md#tool-decorator)
    * [`tool()`](tools.md#wayflowcore.tools.toolhelpers.tool)
  * [Tool Request and Result Classes](tools.md#tool-request-and-result-classes)
    * [`ToolRequest`](tools.md#wayflowcore.tools.tools.ToolRequest)
    * [`ToolResult`](tools.md#wayflowcore.tools.tools.ToolResult)
  * [ToolBox](tools.md#toolbox)
    * [`ToolBox`](tools.md#wayflowcore.tools.toolbox.ToolBox)
* [Tracing](tracing.md)
  * [Trace](tracing.md#trace)
    * [`get_trace()`](tracing.md#wayflowcore.tracing.trace.get_trace)
    * [`Trace`](tracing.md#wayflowcore.tracing.trace.Trace)
  * [Spans](tracing.md#spans)
    * [`get_current_span()`](tracing.md#wayflowcore.tracing.span.get_current_span)
    * [`get_active_span_stack()`](tracing.md#wayflowcore.tracing.span.get_active_span_stack)
    * [`Span`](tracing.md#wayflowcore.tracing.span.Span)
    * [`LlmGenerationSpan`](tracing.md#wayflowcore.tracing.span.LlmGenerationSpan)
    * [`ConversationalComponentExecutionSpan`](tracing.md#wayflowcore.tracing.span.ConversationalComponentExecutionSpan)
    * [`ConversationSpan`](tracing.md#wayflowcore.tracing.span.ConversationSpan)
    * [`ToolExecutionSpan`](tracing.md#wayflowcore.tracing.span.ToolExecutionSpan)
    * [`StepInvocationSpan`](tracing.md#wayflowcore.tracing.span.StepInvocationSpan)
    * [`ContextProviderExecutionSpan`](tracing.md#wayflowcore.tracing.span.ContextProviderExecutionSpan)
  * [Span Processors](tracing.md#span-processors)
    * [`SpanProcessor`](tracing.md#wayflowcore.tracing.spanprocessor.SpanProcessor)
    * [`SimpleSpanProcessor`](tracing.md#wayflowcore.tracing.spanprocessor.SimpleSpanProcessor)
  * [Span Exporter](tracing.md#span-exporter)
    * [`SpanExporter`](tracing.md#wayflowcore.tracing.spanexporter.SpanExporter)
  * [OpenTelemetry](tracing.md#opentelemetry)
    * [`OtelSimpleSpanProcessor`](tracing.md#wayflowcore.tracing.opentelemetry.spanprocessor.OtelSimpleSpanProcessor)
    * [`OtelBatchSpanProcessor`](tracing.md#wayflowcore.tracing.opentelemetry.spanprocessor.OtelBatchSpanProcessor)
* [Variables](variables.md)
  * [`Variable`](variables.md#wayflowcore.variable.Variable)
    * [`Variable.default_value`](variables.md#wayflowcore.variable.Variable.default_value)
    * [`Variable.from_dict()`](variables.md#wayflowcore.variable.Variable.from_dict)
    * [`Variable.from_property()`](variables.md#wayflowcore.variable.Variable.from_property)
    * [`Variable.to_dict()`](variables.md#wayflowcore.variable.Variable.to_dict)
    * [`Variable.to_property()`](variables.md#wayflowcore.variable.Variable.to_property)
    * [`Variable.type`](variables.md#wayflowcore.variable.Variable.type)
  * [`VariableWriteOperation`](variables.md#wayflowcore.variable.VariableWriteOperation)
    * [`VariableWriteOperation.INSERT`](variables.md#wayflowcore.variable.VariableWriteOperation.INSERT)
    * [`VariableWriteOperation.MERGE`](variables.md#wayflowcore.variable.VariableWriteOperation.MERGE)
    * [`VariableWriteOperation.OVERWRITE`](variables.md#wayflowcore.variable.VariableWriteOperation.OVERWRITE)
* [Datastores](datastores.md)
  * [Entity](datastores.md#entity)
    * [`Entity`](datastores.md#wayflowcore.datastore.Entity)
    * [`nullable`](datastores.md#wayflowcore.datastore.nullable)
  * [Base class](datastores.md#base-class)
    * [`Datastore`](datastores.md#wayflowcore.datastore.Datastore)
  * [In memory](datastores.md#in-memory)
    * [`InMemoryDatastore`](datastores.md#wayflowcore.datastore.InMemoryDatastore)
  * [Relational Datastore](datastores.md#relational-datastore)
    * [`RelationalDatastore`](datastores.md#wayflowcore.datastore._relational.RelationalDatastore)
  * [Oracle Database](datastores.md#oracle-database)
    * [`OracleDatabaseConnectionConfig`](datastores.md#wayflowcore.datastore.OracleDatabaseConnectionConfig)
    * [`TlsOracleDatabaseConnectionConfig`](datastores.md#wayflowcore.datastore.TlsOracleDatabaseConnectionConfig)
    * [`MTlsOracleDatabaseConnectionConfig`](datastores.md#wayflowcore.datastore.MTlsOracleDatabaseConnectionConfig)
    * [`OracleDatabaseDatastore`](datastores.md#wayflowcore.datastore.OracleDatabaseDatastore)
  * [Postgres Database](datastores.md#postgres-database)
    * [`PostgresDatabaseConnectionConfig`](datastores.md#wayflowcore.datastore.PostgresDatabaseConnectionConfig)
    * [`TlsPostgresDatabaseConnectionConfig`](datastores.md#wayflowcore.datastore.TlsPostgresDatabaseConnectionConfig)
    * [`PostgresDatabaseDatastore`](datastores.md#wayflowcore.datastore.PostgresDatabaseDatastore)
* [Auth](auth.md)
  * [Auth classes](auth.md#auth-classes)
    * [`AuthConfig`](auth.md#wayflowcore.auth.auth.AuthConfig)
    * [`OAuthEndpoints`](auth.md#wayflowcore.auth.auth.OAuthEndpoints)
    * [`PKCEMethod`](auth.md#wayflowcore.auth.auth.PKCEMethod)
    * [`PKCEPolicy`](auth.md#wayflowcore.auth.auth.PKCEPolicy)
    * [`OAuthClientConfig`](auth.md#wayflowcore.auth.auth.OAuthClientConfig)
    * [`OAuthConfig`](auth.md#wayflowcore.auth.auth.OAuthConfig)
  * [Auth-related Classes](auth.md#auth-related-classes)
    * [`AuthChallengeRequest`](auth.md#wayflowcore.auth.auth.AuthChallengeRequest)
    * [`AuthChallengeResult`](auth.md#wayflowcore.auth.auth.AuthChallengeResult)
* [Search](search.md)
  * [Search Configuration](search.md#search-configuration)
    * [`SearchConfig`](search.md#wayflowcore.search.config.SearchConfig)
    * [`VectorConfig`](search.md#wayflowcore.search.config.VectorConfig)
    * [`RetrieverConfig`](search.md#wayflowcore.search.config.RetrieverConfig)
    * [`VectorRetrieverConfig`](search.md#wayflowcore.search.config.VectorRetrieverConfig)
    * [`SerializerConfig`](search.md#wayflowcore.search.config.SerializerConfig)
    * [`ConcatSerializerConfig`](search.md#wayflowcore.search.config.ConcatSerializerConfig)
  * [Similarity Metrics](search.md#similarity-metrics)
    * [`SimilarityMetric`](search.md#wayflowcore.search.metrics.SimilarityMetric)
  * [Search Toolbox](search.md#search-toolbox)
    * [`SearchToolBox`](search.md#wayflowcore.search.toolbox.SearchToolBox)
  * [Vector Generator](search.md#vector-generator)
    * [`VectorGenerator`](search.md#wayflowcore.search.vectorgenerator.VectorGenerator)
    * [`SimpleVectorGenerator`](search.md#wayflowcore.search.vectorgenerator.SimpleVectorGenerator)
  * [Vector Indexes](search.md#vector-indexes)
    * [`VectorIndex`](search.md#wayflowcore.search.vectorindex.VectorIndex)
    * [`OracleDatabaseVectorIndex`](search.md#wayflowcore.search.vectorindex.OracleDatabaseVectorIndex)
    * [`BaseInMemoryVectorIndex`](search.md#wayflowcore.search.vectorindex.BaseInMemoryVectorIndex)
    * [`EntityVectorIndex`](search.md#wayflowcore.search.vectorindex.EntityVectorIndex)
* [Warnings](warnings.md)
  * [`SecurityWarning`](warnings.md#wayflowcore.warnings.SecurityWarning)
* [Evaluation](evaluation.md)
  * [Assistant Evaluation](evaluation.md#assistant-evaluation)
    * [`EvaluationTask`](evaluation.md#wayflowcore.evaluation.assistantevaluator.EvaluationTask)
    * [`EvaluationEnvironment`](evaluation.md#wayflowcore.evaluation.assistantevaluator.EvaluationEnvironment)
    * [`AssistantEvaluator`](evaluation.md#wayflowcore.evaluation.assistantevaluator.AssistantEvaluator)
    * [`TaskScorer`](evaluation.md#wayflowcore.evaluation.taskscorer.TaskScorer)
    * [`run_proxy_agent_conversation`](evaluation.md#wayflowcore.evaluation.assistantevaluator.run_proxy_agent_conversation)
    * [`AssistantEvaluationResult`](evaluation.md#wayflowcore.evaluation.assistantevaluator.AssistantEvaluationResult)
    * [`HumanProxyAssistant`](evaluation.md#wayflowcore.evaluation.assistantevaluator.HumanProxyAssistant)
  * [Conversation Evaluation](evaluation.md#conversation-evaluation)
    * [`ConversationEvaluator`](evaluation.md#wayflowcore.evaluation.conversationevaluator.ConversationEvaluator)
    * [`ConversationScorer`](evaluation.md#wayflowcore.evaluation.conversationscorer.ConversationScorer)
    * [`UsefulnessScorer`](evaluation.md#wayflowcore.evaluation.usefulnessscorer.UsefulnessScorer)
    * [`UserHappinessScorer`](evaluation.md#wayflowcore.evaluation.userhappinessscorer.UserHappinessScorer)
    * [`CriteriaScorer`](evaluation.md#wayflowcore.evaluation.criteriascorer.CriteriaScorer)
    * [`DEFAULT_SCORE_MAP`](evaluation.md#wayflowcore.evaluation.criteriascorer.DEFAULT_SCORE_MAP)
  * [Evaluation Metrics](evaluation.md#evaluation-metrics)
    * [`calculate_set_metrics()`](evaluation.md#wayflowcore.evaluation.evaluation_metrics.calculate_set_metrics)
    * [`calculate_accuracy()`](evaluation.md#wayflowcore.evaluation.evaluation_metrics.calculate_accuracy)
* [Component](component.md)
  * [`Component`](component.md#wayflowcore.component.Component)
* [A2A](a2a.md)
  * [`A2AConnectionConfig`](a2a.md#wayflowcore.a2a.a2aagent.A2AConnectionConfig)
    * [`A2AConnectionConfig.cert_file`](a2a.md#wayflowcore.a2a.a2aagent.A2AConnectionConfig.cert_file)
    * [`A2AConnectionConfig.headers`](a2a.md#wayflowcore.a2a.a2aagent.A2AConnectionConfig.headers)
    * [`A2AConnectionConfig.key_file`](a2a.md#wayflowcore.a2a.a2aagent.A2AConnectionConfig.key_file)
    * [`A2AConnectionConfig.retry_policy`](a2a.md#wayflowcore.a2a.a2aagent.A2AConnectionConfig.retry_policy)
    * [`A2AConnectionConfig.ssl_ca_cert`](a2a.md#wayflowcore.a2a.a2aagent.A2AConnectionConfig.ssl_ca_cert)
    * [`A2AConnectionConfig.timeout`](a2a.md#wayflowcore.a2a.a2aagent.A2AConnectionConfig.timeout)
    * [`A2AConnectionConfig.verify`](a2a.md#wayflowcore.a2a.a2aagent.A2AConnectionConfig.verify)
  * [`A2ASessionParameters`](a2a.md#wayflowcore.a2a.a2aagent.A2ASessionParameters)
    * [`A2ASessionParameters.max_retries`](a2a.md#wayflowcore.a2a.a2aagent.A2ASessionParameters.max_retries)
    * [`A2ASessionParameters.poll_interval`](a2a.md#wayflowcore.a2a.a2aagent.A2ASessionParameters.poll_interval)
    * [`A2ASessionParameters.timeout`](a2a.md#wayflowcore.a2a.a2aagent.A2ASessionParameters.timeout)
  * [A2A Agent](a2a.md#a2a-agent)
